# ChiBot

chibot_bringup/: CMakeLists.txt  package.xml
chibot_bringup/launch/: chibot_connect.launch  chibot_core.launch  chibot_lidar.launch  chibot_odom.launch  chibot_robot.launch
chibot_bringup/src/: .chibot_odom.cpp.swp  chibot_connect.cpp  chibot_odom.cpp
chibot_navigation/: CMakeLists.txt  package.xml
chibot_navigation/launch/: amcl.launch  chibot_navigation.launch  move_base.launch
chibot_navigation/maps/: map.pgm  mapfull.pgm  mapfull.yaml  maphome.pgm  maphome.yaml  secondmap.pgm  secondmap.yaml  testmap.pgm  testmap.yaml
chibot_navigation/param/: base_local_planner_params.yaml  costmap_common_params_chibot.yaml  dwa_local_planner_params_chibot.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
chibot_slam/: CMakeLists.txt  package.xml
chibot_slam/config/: gmapping_params.yaml
chibot_slam/launch/: chibot_cartographer.launch  chibot_frontier_exploration.launch  chibot_gmapping.launch  chibot_karto.launch  chibot_manipulation_slam.launch  chibot_slam.launch
chibot_slam/src/: flat_world_imu_node.cpp
chibot_teleop/: CMakeLists.txt  package.xml  setup.py
chibot_teleop/chibot_teleop/: CMakeLists.txt  package.xml
chibot_teleop/src/: teleop.py
